# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  28 Nov 2006; Roy Marples <uberlord@gentoo.org>:

    Add a note about any system settings such as dns_domain_ stamping
    on reslov.conf and how to manage it properly, #156478.

    dhcpcd now works on FreeBSD :)

  14 Nov 2006; Roy Marples <uberlord@gentoo.org>:

    Don't mount /proc/bus/usb readonly, #103133 thanks to Niels Laukens.

    Added volumes init script (Linux only) to start your volumes.
    Using RC_NEED/USE/AFTER you can define when it starts,
    even before checkroot if you need it to.

    Move RC_VOLUME_ORDER to conf.d/volumes as VOLUME_ORDER.
    Old var is still supported.

  13 Nov 2006; Roy Marples <uberlord@gentoo.org>:

    localmount won't unmount any partitions that the current process is using.

    Punt cruft from halt.sh to the correct init script so we've a lot more
    modular.

    Fix single user mode, #154961

* baselayout-1.13.0_alpha7 (10 Nov 2006)

  10 Nov 2006; Roy Marples <uberlord@gentoo.org>:

    s-s-d wrapper now works with all perumations of the options, #154649.

    Re-wrote chunks of checkfs and checkroot to tidy things up and more
    importantly return 0 when fsck returns 8 (operational error) which allows
    us to switch seemlessly from single user to multi user on FreeBSD.

    Enforce SOFTLEVEL from the file and not from the environment.

    Don't allow services to start or restart shutdown, reboot or single
    runlevels.

    rc-status now shows services that are scheduled to be started by something.

* baselayout-1.13.0_alpha6 (08 Nov 2006)

  08 Nov 2006; Roy Marples <uberlord@gentoo.org>:

    tuntap interface is now destroyed correctly, #154509 thanks to Andrew Lambe.

    We now keep $svcdir mounted in a ramdisk all the time as discussed
    on gentoo-dev. Dropped the exitcodes folder (useless really) to save
    on a fair chunk of space.
    