@@ -110,8 +110,10 @@ pppd_start() {
 	opts="linkname ${iface} ${opts}"
 
 	# Setup auth info
-	[[ -n ${!username} ]] && opts="user '"${!username}"' ${opts}"
-	opts="remotename ${iface} ${opts}"
+	if [[ " ${opts} " != *" noauth "* ]] ; then
+		[[ -n ${!username} ]] && opts="user '"${!username}"' ${opts}"
+		opts="remotename ${iface} ${opts}"
+	fi
 
 	# Load a custom interface configuration file if it exists
 	[[ -f "/etc/ppp/options.${iface}" ]] \
