@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  05 Dec 2006; Roy Marples <uberlord@gentoo.org>:
+
+    Obey the pppd noauth option, #104869 thanks to Bram Verweij.
+
   28 Nov 2006; Roy Marples <uberlord@gentoo.org>:
 
     Add a note about any system settings such as dns_domain_ stamping
